// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseSegmentList > Snapshot Tests > should match snapshot in reorder mode 1`] = `
<div
  class="space-y-4"
>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
    role="alert"
  >
    <div
      class="text-sm [&_p]:leading-relaxed"
    >
      Drag and drop to reorder modules. Changes will be saved automatically.
    </div>
  </div>
  <div
    class="space-y-3"
  >
    <div
      class="relative group"
    >
      <div
        class="absolute left-0 top-0 bottom-0 flex items-center -ml-8 opacity-0 group-hover:opacity-100 transition-opacity cursor-move"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
      </div>
      <a
        class="block"
        href="/courses/course-1/modules/segment-1"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  1
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Introduction to TypeScript
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    Learn the basics of TypeScript and type safety
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
                >
                  Video
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  30m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  70
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Unlimited attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative group"
    >
      <div
        class="absolute left-0 top-0 bottom-0 flex items-center -ml-8 opacity-0 group-hover:opacity-100 transition-opacity cursor-move"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
      </div>
      <a
        class="block"
        href="/courses/course-1/modules/segment-2"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  2
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    SCORM Package - React Basics
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    Interactive SCORM module for learning React
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
                >
                  SCORM
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  1h
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  80
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Max 3 attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative group"
    >
      <div
        class="absolute left-0 top-0 bottom-0 flex items-center -ml-8 opacity-0 group-hover:opacity-100 transition-opacity cursor-move"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
      </div>
      <a
        class="block"
        href="/courses/course-1/modules/segment-3"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  3
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Practice Exercises
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    Hands-on coding exercises
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
                >
                  Exercise
                </div>
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
                >
                  Draft
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  40m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  75
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Unlimited attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative group"
    >
      <div
        class="absolute left-0 top-0 bottom-0 flex items-center -ml-8 opacity-0 group-hover:opacity-100 transition-opacity cursor-move"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
      </div>
      <a
        class="block"
        href="/courses/course-1/modules/segment-4"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  4
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Documentation Review
                  </h3>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
                >
                  Document
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  10m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Unlimited attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative group"
    >
      <div
        class="absolute left-0 top-0 bottom-0 flex items-center -ml-8 opacity-0 group-hover:opacity-100 transition-opacity cursor-move"
      >
        <svg
          class="lucide lucide-grip-vertical h-5 w-5 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
      </div>
      <a
        class="block"
        href="/courses/course-1/modules/segment-5"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  5
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Custom Module
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    A custom learning module
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
                >
                  Custom
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  1h 30m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  85
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="text-sm text-muted-foreground text-center pt-2"
  >
    Showing 
    5
     module
    s
     in order
  </div>
</div>
`;

exports[`CourseSegmentList > Snapshot Tests > should match snapshot with empty state 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    No modules found
  </div>
</div>
`;

exports[`CourseSegmentList > Snapshot Tests > should match snapshot with segments 1`] = `
<div
  class="space-y-4"
>
  <div
    class="space-y-3"
  >
    <div
      class="relative"
    >
      <a
        class="block"
        href="/courses/course-1/modules/segment-1"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  1
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Introduction to TypeScript
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    Learn the basics of TypeScript and type safety
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
                >
                  Video
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  30m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  70
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Unlimited attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative"
    >
      <a
        class="block"
        href="/courses/course-1/modules/segment-2"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  2
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    SCORM Package - React Basics
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    Interactive SCORM module for learning React
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
                >
                  SCORM
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  1h
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  80
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Max 3 attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative"
    >
      <a
        class="block"
        href="/courses/course-1/modules/segment-3"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  3
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Practice Exercises
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    Hands-on coding exercises
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
                >
                  Exercise
                </div>
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
                >
                  Draft
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  40m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  75
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Unlimited attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative"
    >
      <a
        class="block"
        href="/courses/course-1/modules/segment-4"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  4
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Documentation Review
                  </h3>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
                >
                  Document
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  10m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <span>
                  Unlimited attempts
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
    <div
      class="relative"
    >
      <a
        class="block"
        href="/courses/course-1/modules/segment-5"
      >
        <div
          class="rounded-lg border bg-card text-card-foreground shadow-sm transition-shadow hover:shadow-md"
        >
          <div
            class="flex flex-col space-y-1.5 p-6"
          >
            <div
              class="flex items-start justify-between gap-2"
            >
              <div
                class="flex items-start gap-3 flex-1"
              >
                <div
                  class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/10 text-primary font-semibold text-sm flex-shrink-0"
                >
                  5
                </div>
                <div
                  class="flex-1 min-w-0"
                >
                  <h3
                    class="text-2xl font-semibold leading-none tracking-tight line-clamp-2"
                  >
                    Custom Module
                  </h3>
                  <p
                    class="text-sm text-muted-foreground line-clamp-2 mt-1"
                  >
                    A custom learning module
                  </p>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 items-end flex-shrink-0"
              >
                <div
                  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
                >
                  Custom
                </div>
              </div>
            </div>
          </div>
          <div
            class="p-6 pt-0"
          >
            <div
              class="flex flex-wrap gap-4 text-sm text-muted-foreground"
            >
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-clock h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                  <polyline
                    points="12 6 12 12 16 14"
                  />
                </svg>
                <span>
                  1h 30m
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-hash h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="4"
                    x2="20"
                    y1="9"
                    y2="9"
                  />
                  <line
                    x1="4"
                    x2="20"
                    y1="15"
                    y2="15"
                  />
                  <line
                    x1="10"
                    x2="8"
                    y1="3"
                    y2="21"
                  />
                  <line
                    x1="16"
                    x2="14"
                    y1="3"
                    y2="21"
                  />
                </svg>
                <span>
                  Pass: 
                  85
                  %
                </span>
              </div>
              <div
                class="flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-file-text h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
                  />
                  <path
                    d="M14 2v4a2 2 0 0 0 2 2h4"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
                <span>
                  Has Content
                </span>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
